# deskassistant-host

./: Cargo.toml  README.md  regenerate_bindings.sh
cli/: Cargo.toml
cli/src/: main.rs
driver/: Cargo.toml  README.md
driver/src/: actions.rs  connection.rs  epdimage.rs  error.rs  lib.rs  messages.rs  pybindings.rs
ui/: core.py  main.py  ui.py
