[package]
name = "deskassistant_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deskassistant_driver = { path = "../driver" }
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
clap = { version = "3.2", features = ["derive"] }