[package]
name = "deskassistant_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "deskassistant_driver"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib", "lib"]

[dependencies]
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
rusb = "0.9"
image = "0.24"
imageproc = "0.23"
num-traits = "0.2"
num-derive = "0.3"
clap = { version = "3.2", features = ["derive"] }
pyo3 = { version = "0.16.5", features = ["extension-module", "anyhow"] }
